# Parking-Spot-System

./: .gitignore  README.md  pyproject.toml
scripts/: data_collection.py  run_yolo_inference.py
