[project]
name = "parking-lot-project"
version = "0.1.0"
description = "automated parking spot detection application"
authors = [
    {name = "Spencer Smith"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ultralytics (>=8.3.170,<9.0.0)",
    "numpy (>=2.0,<2.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
